--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "koa-convert": "^1.2.0",
     "koa-cors": "next",
     "koa-generic-session": "next",
+    "koa-generic-session-mongo": "^0.3.1",
     "koa-passport": "next",
     "koa-route": "next",
     "koa-static": "^2.0.0",
     "moment": "^2.17.1",
-    "mongoose": "^4.8.0",
+    "mongoose": "^4.8.1",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
     "ramda": "^0.22.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "redis": "^2.6.5",
     "webpack": "2.2.0",
     "winston-koa-logger": "next"
   },
