npm scripts as tools

--- a/package.json
+++ b/package.json
@@ -5,14 +5,9 @@
   "author": "Ron Gierlach <rongierlach@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf bundles/*",
-    "build": "npm run clean && webpack",
-    "build:prod": "NODE_ENV=production npm run build",
-    "serve": "node index.js",
-    "serve:prod": "NODE_ENV=production node index.js",
-    "start": "npm run build && npm run serve",
-    "start:prod": "npm run build:prod && npm run serve:prod",
-    "dev": "NODE_ENV=development npm run start",
+    "build": "tools/bin/build",
+    "dev": "tools/bin/dev",
+    "serve": "tools/bin/serve",
     "test": ""
   },
   "standard": {
@@ -52,8 +47,11 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "chokidar": "^1.6.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "koa-webpack": "next",
+    "nodemon": "^1.11.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "standard": "^8.6.0",
     "standard-loader": "^5.0.0",
     "webpack-make-rule": "^1.1.1",
