--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "koa-generic-session-mongo": "^0.3.1",
     "koa-passport": "next",
     "koa-route": "next",
-    "koa-static": "^2.0.0",
+    "koa-static": "next",
     "moment": "^2.17.1",
     "mongoose": "^4.8.1",
     "passport-facebook": "^2.1.1",
@@ -34,7 +34,12 @@
     "ramda": "^0.22.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-redux-connect-helpers": "^3.0.2",
     "redis": "^2.6.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
     "webpack": "2.2.0",
     "winston-koa-logger": "next"
   },
@@ -47,6 +52,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.22.0",
     "chokidar": "^1.6.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "koa-webpack": "next",
